--- a/index.html
+++ b/index.html
@@ -1,12 +1,88 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Portfolio</title>
+        <title>Resume</title>
     </head>
     <body>
-        <center>
-            <h3>Ramadevi Boddu</h3>
-            <p>This is my portfolio website.</p>
-        </center>
+    <img align="right" src="bird.jpg.jpg" width="150px">
+    <h1 align="center">BODDU RAMADEVI</h1>
+    <br><br>
+    <table align="center" border="10px" >
+    <tr>
+    <td>Email: 20b01a0413@svecw.edu.in</td>
+<td></td>
+<td>B-Tech Branch: ELECTRONICS AND COMMUNICATION ENGINEERING</td>
+</tr>
+<tr>
+<td>Contact: 9245673451</td>
+<td></td>
+<td>College: Shri Vishnu Engineering College for Women</td>
+</tr>
+</table>
+<br><br><br>
+<hr>
+<p><b>Objective:</b><br>Ambitious, Creative, Confident, Hard-working and Committed character,
+     seeking to pursue my career with a dynamic Organisation.
+      Looking forward to explore my knowledge and to gain work experience."</p><br>
+<b>Educational Qualifications:</b>
+<table align="center" border="10px" >
+<tr>
+<td><b>Qualification</b></td>
+<td><b>School/College</b></td>
+<td><b>Board of Examination</b></td>
+<td><b>CGPA</b></td>
+<td><b>Year of Passing<b></b>
+</tr>
+<tr>
+<td>B.Tech(2020-2024)</td>
+<td>Shri Vishnu Engineering College for Women,Bhimavaram</td>
+<td>J.N.T.U Kakinada</td>
+<td>8.83</td>
+<td>2024</td>
+</tr>
+<tr>
+<td>Intermediate</td>
+<td>Tirumala junior College,Rajahmundry</td>
+<td>B.I.E</td>
+<td>9.82</td>
+<td>2020</td>
+</tr>
+<tr>
+<td>10th Class</td>
+<td>Pragati English Medium High School, Samalkot</td>
+<td>S.S.C</td>
+<td>10</td>
+<td>2018</td>
+</tr>
+</table>
+<b>Technical Skills:</b>
+<ul>
+<li>Programming Languages: C, Python.</li>
+<li>Web Technologies: Basics of HTMl, Css, Bootstrap.</li>
+</ul>
+<b>Co-Curricular Activities:</b>
+<ul>
+<li>organic Farming Club Cordinator in SVECW</li>
+</ul>
+<b>Hobbies:</b>
+<ul>
+<li>Exploring Internet</li>
+<li>Reading Books</li>
+<li>Organic Farming</li>
+</ul>
+<b>Personal Details:</b>
+<ul Style="list-style-type: square;">
+<li>Full Name : BODDU RAMADEVI</li>
+<li>Date of Birth : 09<sup>th</sup> September 2002</li>
+<li>Languages Known : English and Telugu.</li>
+</ul>
+<b>Contact Details:</b>
+<ul>
+<li>Address : Door no- 12-00, Old Ramalayam street, Seethanagaram, Jaggampeta, East Godavari District - 5333435.</li>
+<li>Phone Number : 9014485835.</li>
+</ul>
+<b>Declaration:</b>
+<p>I here by declare that the above mentioned details are true according to my best knowledge.</p>
+<p align="right"><b>BODDU RAMADEVI</b></p>
     </body>
 </html>
